Changed app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MiMiMi</string>
+    <string name="app_name">MiMiMi Converter</string>
     <string name="escribir_aqu">Write here</string>
     <string name="nota_el_texto_se_copiar_autom_ticamente_al_transformar">Note: The text will be copied automatically when converting.</string>
     <string name="convert">Convert</string>
